--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<!--html lang="en-CA" manifest="calculator.appcache"-->
-<html lang="en-CA">
+<html lang="en-CA" manifest="calculator.appcache">
 <head>
 	<meta charset="utf-8">
 	<title>Calculator - A calculator web app for iPhone</title>
@@ -208,7 +207,7 @@
 		</div>
 	</div>
 
-	<script type="text/javascript" src="js/vue.js"></script>
+	<script type="text/javascript" src="js/vue.min.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
