--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 		</div>
 	</div>
 
-	<script type="text/javascript" src="js/vue.js"></script>
+	<script type="text/javascript" src="js/vue.min.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
