#97 Redesiged history list

--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
 					v-on:click="$emit('close-history')"
 					v-on:touchend="$emit('close-history')"
 					class="history-close-button"
-					aria-label="Close history">
-						&times;
-				</button>
+					aria-label="Close history"></button>
 			</div>
 			<div id="history-list-scroll" class="history-list-scroll">
 				<ul
