--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 					<div v-html="$options.filters.equation(input)" class="eq"></div>
 				</div>
 			</div>
+			<div v-if="brackets" class="brackets-count">{{ brackets }}</div>
 			<div class="keypad">
 				<button
 					v-on:click="clearAll(null)"
