--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 	<link rel="apple-touch-icon-precomposed" sizes="120x120" href="assets/touch-icon-iphone-120.png">
 	<link rel="apple-touch-icon-precomposed" sizes="152x152" href="assets/touch-icon-iphone-152.png">
 	<link rel="apple-touch-icon-precomposed" sizes="180x180" href="assets/touch-icon-iphone-180.png">
+	<link rel="apple-touch-icon-precomposed" sizes="87x87"   href="assets/touch-icon-iphone-87.png">
 	<link rel="apple-touch-icon-precomposed" sizes="76x76"   href="assets/touch-icon-iphone-76.png">
+	<link rel="apple-touch-icon-precomposed" sizes="58x58"   href="assets/touch-icon-iphone-58.png">
 </head>
 <body>
 	<template id="history-component">
