Added home bar spacer for iPhone X devices

--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
 						=
 				</button>
 			</div>
+			<div class="c-spacer"></div>
 		</div>
 		<div class="installation" v-else>
 			<div class="instructions">
