--- a/index.html
+++ b/index.html
@@ -1,231 +1,24 @@
 <!DOCTYPE html>
-<html lang="en-CA" manifest="calculator.appcache">
-<head>
-	<meta charset="utf-8">
-	<title>Calculator - A calculator web app for iPhone</title>
-
-	<meta name="author" content="Phil Buchanan">
-	<meta name="description" content="A minimal calculator for iPhone and iPad with support for backspace, brackets and history.">
-
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-	<meta name="apple-mobile-web-app-capable" content="yes">
-	<meta name="apple-mobile-web-app-status-bar-style" content="default">
-	<meta name="apple-mobile-web-app-title" content="Calculator">
-	<meta name="format-detection" content="telephone=no">
-
-	<link rel="stylesheet" href="css/style.css">
-
-	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/touch-icon-iphone-114.png">
-	<link rel="apple-touch-icon-precomposed" sizes="120x120" href="assets/touch-icon-iphone-120.png">
-	<link rel="apple-touch-icon-precomposed" sizes="152x152" href="assets/touch-icon-iphone-152.png">
-	<link rel="apple-touch-icon-precomposed" sizes="180x180" href="assets/touch-icon-iphone-180.png">
-	<link rel="apple-touch-icon-precomposed" sizes="87x87"   href="assets/touch-icon-iphone-87.png">
-	<link rel="apple-touch-icon-precomposed" sizes="76x76"   href="assets/touch-icon-iphone-76.png">
-	<link rel="apple-touch-icon-precomposed" sizes="58x58"   href="assets/touch-icon-iphone-58.png">
-</head>
-<body>
-	<template id="history-component">
-		<div class="history-container">
-			<div class="history-title-bar">
-				History
-				<button
-					v-on:click="$emit('close-history')"
-					v-on:touchend="$emit('close-history')"
-					class="history-close-button"
-					aria-label="Close history"></button>
-			</div>
-			<div id="history-list-scroll" class="history-list-scroll">
-				<ul
-					v-on:touchstart="setDragging(false)"
-					v-on:touchmove="setDragging(true)"
-					class="history-list">
-						<li v-for="item in history">
-							<button
-								v-on:click="emitHistoryValue(item.result)"
-								v-on:touchend="appendHistoryValueToEquation(item.result)"
-								class="history-button">
-									<span class="history-button-result">
-										{{ item.result | addCommas }}
-									</span>
-									<span v-html="$options.filters.equation(item.equ)" class="history-button-equation"></span>
-							</button>
-						</li>
-				</ul>
-			</div>
-		</div>
-	</template>
-
-	<div id="app" class="app">
-		<transition name="slide">
-			<history
-				v-if="historyIsOpen"
-				v-on:close-history="closeHistory"
-				v-on:append-history-value="appendHistoryValueToEquation"
-				v-bind:history="history"/>
-		</transition>
-		<div class="application" v-on:touchstart="disableBounceScrolling" v-if="isInstalled">
-			<div class="display">
-				<div class="result">
-					<div v-bind:style="{ fontSize: resultFontSize + 'px' }">
-						{{ result | addCommas}}
-					</div>
-				</div>
-				<div class="equation">
-					<div v-html="$options.filters.equation(input)" class="eq"></div>
-				</div>
-			</div>
-			<div v-if="brackets" class="brackets-count">{{ brackets }}</div>
-			<div class="keypad">
-				<button
-					v-on:click="clearAll(null)"
-					v-on:touchend="clearAll(null)"
-					class="keypad-button keypad-button--clear">
-						c
-				</button>
-				<button
-					v-on:click="openHistory"
-					v-on:touchend="openHistory"
-					class="keypad-button keypad-button--wide keypad-button--history">
-						History
-				</button>
-				<button
-					v-on:click="backspace"
-					v-on:touchend="backspace"
-					class="keypad-button keypad-button--backspace"
-					aria-label="Backspcae">
-				</button>
-				<button
-					v-on:click="invertNumber"
-					v-on:touchend="invertNumber"
-					class="keypad-button keypad-button--plus-minus">
-						+/&minus;
-				</button>
-				<button
-					v-on:click="appendOpenBracket"
-					v-on:touchend="appendOpenBracket"
-					class="keypad-button keypad-button--bracket">
-						(
-				</button>
-				<button
-					v-on:click="appendCloseBracket"
-					v-on:touchend="appendCloseBracket"
-					class="keypad-button keypad-button--bracket">
-						)
-				</button>
-				<button
-					v-on:click="appendOperator('/')"
-					v-on:touchend="appendOperator('/')"
-					v-bind:class="{ 'is-active': isDivideActive }"
-					class="keypad-button keypad-button--operator">
-						&divide;
-				</button>
-				<button
-					v-on:click="appendDigit(7)"
-					v-on:touchend="appendDigit(7)"
-					class="keypad-button">
-						7
-				</button>
-				<button
-					v-on:click="appendDigit(8)"
-					v-on:touchend="appendDigit(8)"
-					class="keypad-button">
-						8
-				</button>
-				<button
-					v-on:click="appendDigit(9)"
-					v-on:touchend="appendDigit(9)"
-					class="keypad-button">
-						9
-				</button>
-				<button
-					v-on:click="appendOperator('*')"
-					v-on:touchend="appendOperator('*')"
-					v-bind:class="{ 'is-active': isMultiplyActive }"
-					class="keypad-button keypad-button--operator">
-						&times;
-				</button>
-				<button
-					v-on:click="appendDigit(4)"
-					v-on:touchend="appendDigit(4)"
-					class="keypad-button">
-						4
-				</button>
-				<button
-					v-on:click="appendDigit(5)"
-					v-on:touchend="appendDigit(5)"
-					class="keypad-button">
-						5
-				</button>
-				<button
-					v-on:click="appendDigit(6)"
-					v-on:touchend="appendDigit(6)"
-					class="keypad-button">
-						6
-				</button>
-				<button
-					v-on:click="appendOperator('-')"
-					v-on:touchend="appendOperator('-')"
-					v-bind:class="{ 'is-active': isSubtractActive }"
-					class="keypad-button keypad-button--operator">
-						&minus;
-				</button>
-				<button
-					v-on:click="appendDigit(1)"
-					v-on:touchend="appendDigit(1)"
-					class="keypad-button">
-						1
-				</button>
-				<button
-					v-on:click="appendDigit(2)"
-					v-on:touchend="appendDigit(2)"
-					class="keypad-button">
-						2
-				</button>
-				<button
-					v-on:click="appendDigit(3)"
-					v-on:touchend="appendDigit(3)"
-					class="keypad-button">
-						3
-				</button>
-				<button
-					v-on:click="appendOperator('+')"
-					v-on:touchend="appendOperator('+')"
-					v-bind:class="{ 'is-active': isAddActive }"
-					class="keypad-button keypad-button--operator">
-						+
-				</button>
-				<button
-					v-on:click="appendDigit(0)"
-					v-on:touchend="appendDigit(0)"
-					class="keypad-button">
-						0
-				</button>
-				<button
-					v-on:click="appendDecimal"
-					v-on:touchend="appendDecimal"
-					class="keypad-button keypad-button--decimal">
-						.
-				</button>
-				<button
-					v-on:click="equate"
-					v-on:touchend="equate"
-					class="keypad-button keypad-button--wide keypad-button--equals">
-						=
-				</button>
-			</div>
-			<div class="c-spacer"></div>
-		</div>
-		<div class="installation" v-else>
-			<div class="instructions">
-				<div class="app-icon"></div>
-				<span>Add to Home Screen</span><br/>
-				to install on the iPhone
-			</div>
-			<a href="https://twitter.com/philbuchanan" target="_blank" class="twitter">@philbuchanan</a>
-		</div>
-	</div>
-
-	<script type="text/javascript" src="js/vue.min.js"></script>
-	<script type="text/javascript" src="js/app.js"></script>
-</body>
+<html lang="en-CA">
+	<head>
+		<meta charset="utf-8">
+		<title>Calculator - A calculator web app for iPhone</title>
+		<meta name="author" content="Phil Buchanan">
+		<meta name="description" content="A minimal calculator for iPhone and iPad with support for backspace, brackets and history.">
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-status-bar-style" content="default">
+		<meta name="apple-mobile-web-app-title" content="Calculator">
+		<meta name="format-detection" content="telephone=no">
+		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/touch-icon-iphone-114.png">
+		<link rel="apple-touch-icon-precomposed" sizes="120x120" href="assets/touch-icon-iphone-120.png">
+		<link rel="apple-touch-icon-precomposed" sizes="152x152" href="assets/touch-icon-iphone-152.png">
+		<link rel="apple-touch-icon-precomposed" sizes="180x180" href="assets/touch-icon-iphone-180.png">
+		<link rel="apple-touch-icon-precomposed" sizes="87x87"   href="assets/touch-icon-iphone-87.png">
+		<link rel="apple-touch-icon-precomposed" sizes="76x76"   href="assets/touch-icon-iphone-76.png">
+		<link rel="apple-touch-icon-precomposed" sizes="58x58"   href="assets/touch-icon-iphone-58.png">
+	</head>
+	<body>
+		<div id="root"></div>
+	</body>
 </html>
